Created simplified presentation and updated main Jupyter notebook

--- a/simplified-presentation.ipynb
+++ b/simplified-presentation.ipynb
@@ -8,27 +8,20 @@
     }
    },
    "source": [
+    "Harvest data from Web APIs using the Python Requests library\n",
+    "====================================================\n",
+    "\n",
     "Amanda Devine  \n",
     "25 July 2019  \n",
-    "SI Carpentries Brown Bag  \n",
-    "https://github.com/amdevine/cbb-python-requests\n",
+    "SI Carpentries Brown Bag\n",
     "\n",
+    "<br><br><br><br>\n",
     "\n",
-    "Harvest data from Web APIs using the Python Requests library\n",
-    "===================================================="
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "This Jupyter notebook walks through the process of using the Python Requests library, in conjunction with the Pandas library, to download data from website REST API services.\n",
+    "***\n",
     "\n",
-    "As an example dataset, this notebook uses data on the US National Parks available via the United States National Park Service Data API."
+    "GitHub Repository: https://github.com/amdevine/cbb-python-requests  \n",
+    "Detailed Jupyter notebook: https://github.com/amdevine/cbb-python-requests/blob/master/harvest-data-apis-python-requests.ipynb  \n",
+    "Slides: https://amdevine.github.io/cbb-python-requests/"
    ]
   },
   {
@@ -42,18 +35,16 @@
     "Definitions\n",
     "------------------\n",
     "\n",
-    "- **API**: Application Programming Interface. A special page on a website that provides structured data for other programs and applications.\n",
-    "    + **REST**: Newer API format, easily accessed via URL, returns data in a variety of formats including JSON \n",
-    "    + **SOAP**: Older API format, more complex, accepts queries and returns data in XML only\n",
+    "- **(REST) API**: Application Programming Interface. A special page on a website that provides structured data for other programs and applications.\n",
     "\n",
     "\n",
-    "- **GET Request**: An HTTP command to retrieve code and data from a website. GET requests can be made in a variety of ways; the Requests library offers a very easy way to make GET requests from Python.\n",
+    "- **GET Request**: An HTTP command to retrieve code and data from a website. \n",
     "\n",
     "\n",
     "- **JSON**: JavaScript Object Notation. A common format of structuring data, analogous to a Python dictionary.\n",
     "\n",
     "\n",
-    "- **Base URL**: The website URL for all API data. A variety of endpoints can be added to the base URL.\n",
+    "- **Base URL**: The \"home\" website URL for all API data.\n",
     "    > NPS Base URL: `https://developer.nps.gov/api/v1`"
    ]
   },
@@ -65,15 +56,15 @@
     }
    },
    "source": [
-    "- **Endpoint**: The specific URL where the API page can be found. Each website might have multiple endpoints that return different kinds of data. \n",
+    "- **Endpoint**: The specific URL where the API page can be found. \n",
     "    > Parks Endpoint: `https://developer.nps.gov/api/v1/parks`\n",
     "\n",
     "\n",
-    "- **Parameter**: An additional criterion that is added to the endpoint to filter data returned. Parameters are usually added to the endpoint with a `?` character, and are in the format of `field=value`. Multiple parameters can be added to an endpoint, separated by a `&`.\n",
+    "- **Parameter**: An additional criterion that is added to the endpoint to filter data returned. \n",
     "    > parkCode, stateCode, and limit parameters: `https://developer.nps.gov/api/v1/parks?parkCode=yell&stateCode=WY&limit=5`\n",
     "    \n",
     "\n",
-    "- **API Key**: A string of characters assigned by the website to identify the user requesting data via the API. For many API services, an API Key is required when making a request.\n",
+    "- **API Key**: A string of characters assigned by the website to identify the user requesting data via the API. \n",
     "    > National Parks API Key: `https://developer.nps.gov/api/v1/parks?api_key=1mdaBewB37R0kUA2ZtfA6URe7PeUsig6jLQmSXyx` (not a real key!)"
    ]
   },
@@ -81,21 +72,22 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
     "NPS Data API\n",
     "-----------------\n",
     "\n",
-    "The National Park Service (NPS) Data API is a service provided by the United States National Park Service to supply data about natural areas managed by the National Park Service. Data available through the API include park information, campground information, alerts, events, news, and educational resources.\n",
+    "Official source of data about natural areas managed by the National Park Service\n",
+    "- park information\n",
+    "- campground information\n",
+    "- alerts, events, news, educational resources, etc.\n",
     "\n",
-    "All users of the NPS Data API are required to have an API Key. Keys can be obtained here: https://www.nps.gov/subjects/developer/get-started.htm\n",
     "\n",
-    "API documentation is available here: https://www.nps.gov/subjects/developer/api-documentation.htm  \n",
-    "This documentation shows a list of possible endpoints. Clicking on an endpoint shows the parameters that can be supplied to that endpoint to filter results, as well as an example of the JSON data that will be returned from a GET request.\n",
+    "NPS API Keys: https://www.nps.gov/subjects/developer/get-started.htm\n",
     "\n",
-    "The NPS Data API GitHub Repository contains examples of using Python and/or PHP to retrieve data. It is available here: https://github.com/nationalparkservice/nps-api-samples"
+    "NPS Data API documentation: https://www.nps.gov/subjects/developer/api-documentation.htm  "
    ]
   },
   {
@@ -109,11 +101,7 @@
     "Python `requests` library\n",
     "-----------------------------\n",
     "\n",
-    "The Python Requests library provides a simple way to query and retrieve JSON data from API services. It is a wrapper that calls other Python libraries such as `urllib`.\n",
-    "\n",
-    "Requests can be download via Terminal/Command Line with `conda install requests` (if you are running Anaconda/Miniconda) or `pip install requests` (if you are running base Python).\n",
-    "\n",
-    "Making a GET request to retrieve JSON data with Requests is usually done in the following way:\n",
+    "Sample GET Request:\n",
     "\n",
     "    import requests\n",
     "    url = 'https://baseurl.com/endpoint'\n",
@@ -122,23 +110,8 @@
     "        'field2': 'value2',\n",
     "    }\n",
     "    r = requests.get(url, params).json()\n",
-    "\n",
-    "This creates a dictionary, `r`, from which data can be accessed via key-value pairs."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "Parameters supplied to a GET request are automatically encoded to HTML specifications. \n",
-    "\n",
-    "> e.g. the parameter `'q': 'César E. Chávez'` is automatically encoded to `q=C%C3%A9sar%20E.%20Ch%C3%A1vez` by Requests\n",
-    "\n",
-    "Requests has significantly more functionality and many more options beyond simple GET requests. Quickstart documentation is available here: https://3.python-requests.org/user/quickstart/"
+    "    \n",
+    "Quickstart documentation: https://3.python-requests.org/user/quickstart/"
    ]
   },
   {
@@ -152,7 +125,7 @@
     "Setup\n",
     "--------\n",
     "\n",
-    "Import the `requests` library to retrieve data from the NPS Data API. Import the `pandas` library to work with retrieved data and export as tabular files. "
+    "Import the `requests` and `pandas` libraries."
    ]
   },
   {
@@ -171,13 +144,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "source": [
-    "Assign the API Key to a constant. If the code will be available on GitHub or other public sites, avoid assigning it directly and import it from a local file instead. (And don't add this file to GitHub!)"
+    "Save API Key as a constant or read it from a local file."
    ]
   },
   {
@@ -215,18 +184,7 @@
     "Make a GET request to the API to retrieve data\n",
     "--------------------------------------------------------\n",
     "\n",
-    "Use `requests.get()` to make an **HTTP GET Request** to the API. Any parameters can be provided to requests.get() as a dictionary."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "The following request will return data on up to 100 parks in Washington DC, Maryland, and Virginia. `api_key` is a required parameter for all NPS Data API requests. `stateCode` filters parks based on two-letter US state abbreviations. `fields` specifies additional fields to return in addition to the default fields. `limit` specifies the maximum number of results to return."
+    "This request returns data on up to 100 parks in Washington DC, Maryland, and Virginia."
    ]
   },
   {
@@ -253,11 +211,22 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "`api_key` is a required parameter for all NPS Data API requests. `stateCode` filters parks based on two-letter US state abbreviations. `fields` specifies additional fields to return in addition to the default fields. `limit` specifies the maximum number of results to return."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "`requests.get()` returns a variety of information about the web page retrieved. This info can be useful for troubleshooting."
+    "`requests.get()` returns a variety of information about the web page retrieved. "
    ]
   },
   {
@@ -298,9 +267,7 @@
    "source": [
     "## Work with retrieved data\n",
     "\n",
-    "### Convert GET request object to dictionary\n",
-    "\n",
-    "When the API data are supplied in the **JSON** format, they can easily be turned into a Python dictionary using the Requests `.json()` method."
+    "### Convert GET request object to dictionary"
    ]
   },
   {
@@ -308,7 +275,7 @@
    "execution_count": 5,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -316,14 +283,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top level keys: ['data', 'limit', 'start', 'total']\n",
+      "Top level keys: ['limit', 'data', 'start', 'total']\n",
       "\n",
-      "Available keys in each entry: ['states', 'entranceFees', 'name', 'directionsInfo', 'description', 'directionsUrl', 'parkCode', 'weatherInfo', 'id', 'url', 'designation', 'latLong', 'fullName']\n"
+      "Available keys in each entry: ['directionsUrl', 'url', 'fullName', 'description', 'entranceFees', 'id', 'directionsInfo', 'latLong', 'states', 'designation', 'weatherInfo', 'name', 'parkCode']\n"
      ]
     }
    ],
    "source": [
     "parks_data = r.json()\n",
+    "\n",
     "print(\"Top level keys:\", list(parks_data))\n",
     "print(\"\\nAvailable keys in each entry:\", list(parks_data['data'][0]))"
    ]
@@ -336,11 +304,9 @@
     }
    },
    "source": [
-    "### Create a Pandas DataFrame\n",
+    "### Create a DataFrame\n",
     "\n",
-    "Pandas DataFrames make it easy to work with the retrieved data in a tabular format. \n",
-    "\n",
-    "The following code retrieves the states and associated lat/long coordinate for each park."
+    "This code filters the retrieved data to states and associated lat/long coordinate for each park."
    ]
   },
   {
@@ -348,7 +314,7 @@
    "execution_count": 6,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -524,18 +490,7 @@
    "source": [
     "### Restructure/flatten data\n",
     "\n",
-    "If the results contain nested data that need to be flattened (e.g. multiple `entranceFees` for each park), or the results could be otherwise restructured in a more \"tidy\" format, a new list of dictionaries can be created by iterating through the data. This list can then be converted to a DataFrame."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "JSON data for an individual park's multiple entrance fees:"
+    "Retrieved JSON data for an individual park's multiple entrance fees."
    ]
   },
   {
@@ -583,7 +538,7 @@
    "execution_count": 8,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -617,7 +572,7 @@
    "execution_count": 9,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -794,8 +749,6 @@
    "source": [
     "## Export data as a tabular file\n",
     "\n",
-    "Pandas DataFrames have a method, `.to_csv()`, that allows them to be exported as a CSV or TSV file. This file can be imported into another program for further analysis.\n",
-    "\n",
     "CSV file: `df_name.to_csv('output_file_name.csv', index=False)`\n",
     "\n",
     "TSV file: `df_name.to_csv('output_file_name.tsv', sep='\\t', index=False)`"
@@ -817,20 +770,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Additional API Resources\n",
     "-------------------------------\n",
     "\n",
-    "Full **Requests documentation**: https://3.python-requests.org/\n",
+    "Full Requests documentation: https://3.python-requests.org/\n",
     "\n",
-    "**data.gov** is a repository of data produced by US Federal and State Government departments. In addition to data files, data.gov also provides a list of API services for Federal data (https://catalog.data.gov/dataset?res_format=API).\n",
+    "List of US Federal Government APIs: https://catalog.data.gov/dataset?res_format=API\n",
     "\n",
-    "**Programmable Web** (https://www.programmableweb.com/) is a website that aggregates information on APIs provided by governmental and private organizations. This can be a good resource for locating APIs of interest. "
+    "Repository of APIs: https://www.programmableweb.com/"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
