--- a/python-api-slides.ipynb
+++ b/python-api-slides.ipynb
@@ -20,8 +20,7 @@
     "***\n",
     "\n",
     "GitHub Repository: https://github.com/amdevine/cbb-python-requests  \n",
-    "Detailed Jupyter notebook: https://github.com/amdevine/cbb-python-requests/blob/master/harvest-data-apis-python-requests.ipynb  \n",
-    "Slides: https://amdevine.github.io/cbb-python-requests/"
+    "Detailed Jupyter notebook: https://github.com/amdevine/cbb-python-requests/blob/master/harvest-data-apis-python-requests.ipynb "
    ]
   },
   {
@@ -98,7 +97,7 @@
     }
    },
    "source": [
-    "Python `requests` library\n",
+    "Python Requests library\n",
     "-----------------------------\n",
     "\n",
     "Sample GET Request:\n",
@@ -111,7 +110,7 @@
     "    }\n",
     "    r = requests.get(url, params).json()\n",
     "    \n",
-    "Quickstart documentation: https://3.python-requests.org/user/quickstart/"
+    "Quickstart documentation: https://2.python-requests.org/en/master/user/quickstart/"
    ]
   },
   {
@@ -283,9 +282,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top level keys: ['limit', 'data', 'start', 'total']\n",
+      "Top level keys: ['total', 'data', 'limit', 'start']\n",
       "\n",
-      "Available keys in each entry: ['directionsUrl', 'url', 'fullName', 'description', 'entranceFees', 'id', 'directionsInfo', 'latLong', 'states', 'designation', 'weatherInfo', 'name', 'parkCode']\n"
+      "Available keys in each entry: ['states', 'entranceFees', 'directionsInfo', 'directionsUrl', 'url', 'weatherInfo', 'name', 'latLong', 'description', 'designation', 'parkCode', 'id', 'fullName']\n"
      ]
     }
    ],
@@ -541,7 +540,15 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'parkCode': 'afam', 'fullName': 'African American Civil War Memorial', 'designation': '', 'fee_usd': '0.0000', 'fee_type': 'No Entrance Fee', 'fee_description': 'No Entrance Fee to enter park site.'}, {'parkCode': 'anac', 'fullName': 'Anacostia Park', 'designation': 'Park', 'fee_usd': '0.0000', 'fee_type': 'Entrance Fees', 'fee_description': 'There are no entrance fees to this park.'}, {'parkCode': 'anti', 'fullName': 'Antietam National Battlefield', 'designation': 'National Battlefield', 'fee_usd': '7.0000', 'fee_type': 'Antietam National Battlefield Entrance Fee', 'fee_description': '3 day pass - $7.00 per bike or motorcycle \\nThis is the entry fee to the battlefield proper, museum, movie, and ranger programs.'}]\n"
+     ]
+    }
+   ],
    "source": [
     "entry_fees_data = []\n",
     "for park in parks_data['data']:\n",
@@ -553,7 +560,8 @@
     "            'fee_usd': fee['cost'],\n",
     "            'fee_type': fee['title'],\n",
     "            'fee_description': fee['description']\n",
-    "        })"
+    "        })\n",
+    "print(entry_fees_data[:3])"
    ]
   },
   {
@@ -779,7 +787,7 @@
     "Additional API Resources\n",
     "-------------------------------\n",
     "\n",
-    "Full Requests documentation: https://3.python-requests.org/\n",
+    "Full Requests documentation: https://2.python-requests.org/en/master/\n",
     "\n",
     "List of US Federal Government APIs: https://catalog.data.gov/dataset?res_format=API\n",
     "\n",
@@ -790,7 +798,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -804,7 +812,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.7.1"
+  },
+  "rise": {
+   "autolaunch": true,
+   "scroll": true,
+   "theme": "solarized"
   }
  },
  "nbformat": 4,
