Renamed slides and modified content

--- a/python-requests-slides.ipynb
+++ b/python-requests-slides.ipynb
@@ -20,7 +20,8 @@
     "***\n",
     "\n",
     "GitHub Repository: https://github.com/amdevine/cbb-python-requests  \n",
-    "Detailed Jupyter notebook: https://github.com/amdevine/cbb-python-requests/blob/master/harvest-data-apis-python-requests.ipynb "
+    "Detailed Jupyter notebook: https://github.com/amdevine/cbb-python-requests/blob/master/harvest-data-apis-python-requests.ipynb  \n",
+    "Presentation slides: https://github.com/amdevine/cbb-python-requests/blob/master/python-requests-slides.pdf"
    ]
   },
   {
@@ -93,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -138,12 +139,17 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pprint # Prints dictionaries/JSON in a more readable format"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "Save API Key as a constant or read it from a local file."
    ]
@@ -161,7 +167,7 @@
     "# API_KEY = '1mdaBewB37R0kUA2ZtfA6URe7PeUsig6jLQmSXyx'\n",
     "with open('api_key_file.txt', 'r') as f:\n",
     "    API_KEY = f.read().strip()\n",
-    "print(\"API Key: {}\".format(\"API_KEY\")) # Remove quotes to display actual API_KEY"
+    "print(\"API Key: {}\".format(API_KEY)) # Remove quotes to display actual API_KEY"
    ]
   },
   {
@@ -195,7 +201,7 @@
     "    'fields': 'entranceFees',\n",
     "    'limit': 100\n",
     "}\n",
-    "r = requests.get(url, params)"
+    "r = requests.get(url, params)  "
    ]
   },
   {
@@ -213,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -225,13 +231,13 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
    "source": [
     "print(\"The response code is: {}\".format(r.status_code))\n",
-    "print(\"\\nThe retrieved URL is: {}\".format(\"r.url\")) #Remove quotes to display URL\n",
+    "print(\"\\nThe retrieved URL is: {}\".format(r.url)) #Remove quotes to display URL\n",
     "print(\"\\nThe first 300 characters of the retrieved text are:\\n{}\".format(r.text[:300]))"
    ]
   },
@@ -259,9 +265,9 @@
    "outputs": [],
    "source": [
     "parks_data = r.json()\n",
-    "\n",
-    "print(\"Top level keys:\", list(parks_data))\n",
-    "print(\"\\nAvailable keys in each entry:\", list(parks_data['data'][0]))"
+    " \n",
+    "print(\"\\nFirst item in 'data':\\n\")\n",
+    "pprint.pprint(parks_data['data'][0])"
    ]
   },
   {
@@ -315,7 +321,7 @@
    },
    "outputs": [],
    "source": [
-    "parks_data['data'][2]['entranceFees']"
+    "pprint.pprint(parks_data['data'][2])"
    ]
   },
   {
@@ -340,6 +346,7 @@
    "outputs": [],
    "source": [
     "entry_fees_data = []\n",
+    "\n",
     "for park in parks_data['data']:\n",
     "    for fee in park['entranceFees']:\n",
     "        entry_fees_data.append({\n",
@@ -350,7 +357,8 @@
     "            'fee_type': fee['title'],\n",
     "            'fee_description': fee['description']\n",
     "        })\n",
-    "print(entry_fees_data[:3])"
+    "         \n",
+    "pprint.pprint(entry_fees_data[2:4])"
    ]
   },
   {
