Updated slides notebook and PDF copy

--- a/python-requests-slides.ipynb
+++ b/python-requests-slides.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "GitHub Repository: https://github.com/amdevine/cbb-python-requests  \n",
     "Detailed Jupyter notebook: https://github.com/amdevine/cbb-python-requests/blob/master/harvest-data-apis-python-requests.ipynb  \n",
-    "Presentation slides: https://github.com/amdevine/cbb-python-requests/blob/master/python-requests-slides.pdf"
+    "Presentation slides: https://github.com/amdevine/cbb-python-requests/blob/master/python-requests-slides.pdf (run with RISE extension)"
    ]
   },
   {
@@ -167,7 +167,7 @@
     "# API_KEY = '1mdaBewB37R0kUA2ZtfA6URe7PeUsig6jLQmSXyx'\n",
     "with open('api_key_file.txt', 'r') as f:\n",
     "    API_KEY = f.read().strip()\n",
-    "print(\"API Key: {}\".format(API_KEY)) # Remove quotes to display actual API_KEY"
+    "print(\"API Key: {}\".format(\"API_KEY\")) # Remove quotes to display actual API_KEY"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   },
   "rise": {
    "autolaunch": true,
