Updated full Jupyter notebook and notebook PDF

--- a/harvest-data-apis-python-requests.ipynb
+++ b/harvest-data-apis-python-requests.ipynb
@@ -88,7 +88,10 @@
     "NPS Data API\n",
     "-----------------\n",
     "\n",
-    "The National Park Service (NPS) Data API is a service provided by the United States National Park Service to supply data about natural areas managed by the National Park Service. Data available through the API include park information, campground information, alerts, events, news, and educational resources.\n",
+    "The National Park Service (NPS) Data API is a service provided by the United States National Park Service to supply data about natural areas managed by the National Park Service. Data available through the API include \n",
+    "- park information\n",
+    "- campground information\n",
+    "- alerts, events, news, and educational resources.\n",
     "\n",
     "All users of the NPS Data API are required to have an API Key. Keys can be obtained here: https://www.nps.gov/subjects/developer/get-started.htm\n",
     "\n",
@@ -138,7 +141,7 @@
     "\n",
     "> e.g. the parameter `'q': 'César E. Chávez'` is automatically encoded to `q=C%C3%A9sar%20E.%20Ch%C3%A1vez` by Requests\n",
     "\n",
-    "Requests has significantly more functionality and many more options beyond simple GET requests. Quickstart documentation is available here: https://3.python-requests.org/user/quickstart/"
+    "Requests has significantly more functionality and many more options beyond simple GET requests. Quickstart documentation is available here: https://2.python-requests.org/en/master/user/quickstart/"
    ]
   },
   {
@@ -166,7 +169,8 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pprint   # Prints dictionaries/JSON in a more human-readable format"
    ]
   },
   {
@@ -284,7 +288,7 @@
    ],
    "source": [
     "print(\"The response code is: {}\".format(r.status_code))\n",
-    "print(\"\\nThe retrieved URL is: {}\".format(\"r.url\")) #Remove quotes to display URL\n",
+    "print(\"\\nThe retrieved URL is: {}\".format(\"r.url\")) # Remove quotes to display URL\n",
     "print(\"\\nThe first 300 characters of the retrieved text are:\\n{}\".format(r.text[:300]))"
    ]
   },
@@ -316,16 +320,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top level keys: ['data', 'limit', 'start', 'total']\n",
+      "First item in 'data':\n",
       "\n",
-      "Available keys in each entry: ['states', 'entranceFees', 'name', 'directionsInfo', 'description', 'directionsUrl', 'parkCode', 'weatherInfo', 'id', 'url', 'designation', 'latLong', 'fullName']\n"
+      "{'description': 'Over 200,000 African-American soldiers and sailors served in '\n",
+      "                'the U.S. Army and Navy during the Civil War. Their service '\n",
+      "                'helped to end the war and free over four million slaves. The '\n",
+      "                'African American Civil War Memorial honors their service and '\n",
+      "                'sacrifice.',\n",
+      " 'designation': '',\n",
+      " 'directionsInfo': 'The memorial is located at the corner of Vermont Avenue, '\n",
+      "                   '10th St, and U Street NW, near the U '\n",
+      "                   'Street/African-American Civil War Memorial/Cardozo Metro '\n",
+      "                   'Station.',\n",
+      " 'directionsUrl': 'http://www.nps.gov/afam/planyourvisit/directions.htm',\n",
+      " 'entranceFees': [{'cost': '0.0000',\n",
+      "                   'description': 'No Entrance Fee to enter park site.',\n",
+      "                   'title': 'No Entrance Fee'}],\n",
+      " 'fullName': 'African American Civil War Memorial',\n",
+      " 'id': '1A47416F-DAA3-4137-9F30-14AF86B4E547',\n",
+      " 'latLong': 'lat:38.916554, long:-77.025977',\n",
+      " 'name': 'African American Civil War Memorial',\n",
+      " 'parkCode': 'afam',\n",
+      " 'states': 'DC',\n",
+      " 'url': 'https://www.nps.gov/afam/index.htm',\n",
+      " 'weatherInfo': 'Washington DC gets to see all four seasons. Humidity will '\n",
+      "                'make the temps feel hotter in summer and colder in winter.\\n'\n",
+      "                '\\n'\n",
+      "                'Spring (March - May) Temp: Average high is 65.5 degrees with '\n",
+      "                'a low of 46.5 degrees\\n'\n",
+      "                '\\n'\n",
+      "                'Summer (June - August) Temp: Average high is 86 degrees with '\n",
+      "                'a low of 68.5 degrees\\n'\n",
+      "                '\\n'\n",
+      "                'Fall (September - November) Temp: Average high is 68 degrees '\n",
+      "                'with a low of 51.5 degrees\\n'\n",
+      "                '\\n'\n",
+      "                'Winter (December - February) Temp: Average high is 45 degrees '\n",
+      "                'with a low of 30 degrees\\n'\n",
+      "                '\\n'\n",
+      "                '(Source: www.usclimatedata.com)'}\n"
      ]
     }
    ],
    "source": [
     "parks_data = r.json()\n",
-    "print(\"Top level keys:\", list(parks_data))\n",
-    "print(\"\\nAvailable keys in each entry:\", list(parks_data['data'][0]))"
+    "\n",
+    "print(\"First item in 'data':\\n\")\n",
+    "pprint.pprint(parks_data['data'][0])"
    ]
   },
   {
@@ -340,7 +381,7 @@
     "\n",
     "Pandas DataFrames make it easy to work with the retrieved data in a tabular format. \n",
     "\n",
-    "The following code retrieves the states and associated lat/long coordinate for each park."
+    "This code filters the retrieved data to states and associated lat/long coordinate for each park."
    ]
   },
   {
@@ -548,23 +589,44 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'cost': '7.0000',\n",
-       "  'description': '3 day pass - $7.00 per bike or motorcycle \\nThis is the entry fee to the battlefield proper, museum, movie, and ranger programs.',\n",
-       "  'title': 'Antietam National Battlefield Entrance Fee'},\n",
-       " {'cost': '15.0000',\n",
-       "  'description': '3 day vehicle pass.  This pass covers everyone in a vehicle, ie. family.  The pass covers entry to the battlefield proper, museum, movie, and ranger programs.',\n",
-       "  'title': 'Antietam National Battlefield Entrance Fee'}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'description': '23,000 soldiers were killed, wounded or missing after twelve '\n",
+      "                'hours of savage combat on September 17, 1862. The Battle of '\n",
+      "                \"Antietam ended the Confederate Army of Northern Virginia's \"\n",
+      "                'first invasion into the North and led Abraham Lincoln to '\n",
+      "                'issue the preliminary Emancipation Proclamation.',\n",
+      " 'designation': 'National Battlefield',\n",
+      " 'directionsInfo': 'Ten miles south of I-70 on Maryland Route 65',\n",
+      " 'directionsUrl': 'http://www.nps.gov/anti/planyourvisit/directions.htm',\n",
+      " 'entranceFees': [{'cost': '7.0000',\n",
+      "                   'description': '3 day pass - $7.00 per bike or motorcycle \\n'\n",
+      "                                  'This is the entry fee to the battlefield '\n",
+      "                                  'proper, museum, movie, and ranger programs.',\n",
+      "                   'title': 'Antietam National Battlefield Entrance Fee'},\n",
+      "                  {'cost': '15.0000',\n",
+      "                   'description': '3 day vehicle pass.  This pass covers '\n",
+      "                                  'everyone in a vehicle, ie. family.  The '\n",
+      "                                  'pass covers entry to the battlefield '\n",
+      "                                  'proper, museum, movie, and ranger programs.',\n",
+      "                   'title': 'Antietam National Battlefield Entrance Fee'}],\n",
+      " 'fullName': 'Antietam National Battlefield',\n",
+      " 'id': '8415526C-C932-4236-A634-2D89DF718936',\n",
+      " 'latLong': 'lat:39.46763452, long:-77.73828017',\n",
+      " 'name': 'Antietam',\n",
+      " 'parkCode': 'anti',\n",
+      " 'states': 'MD',\n",
+      " 'url': 'https://www.nps.gov/anti/index.htm',\n",
+      " 'weatherInfo': 'The weather is fairly mild.  Summers can be very warm and '\n",
+      "                'humid and winters cold and snowy.  We have four distinct '\n",
+      "                'seasons with the fall and spring being the best times to '\n",
+      "                'visit the battlefield.'}\n"
+     ]
     }
    ],
    "source": [
-    "parks_data['data'][2]['entranceFees']"
+    "pprint.pprint(parks_data['data'][2])"
    ]
   },
   {
@@ -586,9 +648,33 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'designation': 'National Battlefield',\n",
+      "  'fee_description': '3 day pass - $7.00 per bike or motorcycle \\n'\n",
+      "                     'This is the entry fee to the battlefield proper, museum, '\n",
+      "                     'movie, and ranger programs.',\n",
+      "  'fee_type': 'Antietam National Battlefield Entrance Fee',\n",
+      "  'fee_usd': '7.0000',\n",
+      "  'fullName': 'Antietam National Battlefield',\n",
+      "  'parkCode': 'anti'},\n",
+      " {'designation': 'National Battlefield',\n",
+      "  'fee_description': '3 day vehicle pass.  This pass covers everyone in a '\n",
+      "                     'vehicle, ie. family.  The pass covers entry to the '\n",
+      "                     'battlefield proper, museum, movie, and ranger programs.',\n",
+      "  'fee_type': 'Antietam National Battlefield Entrance Fee',\n",
+      "  'fee_usd': '15.0000',\n",
+      "  'fullName': 'Antietam National Battlefield',\n",
+      "  'parkCode': 'anti'}]\n"
+     ]
+    }
+   ],
    "source": [
     "entry_fees_data = []\n",
+    "\n",
     "for park in parks_data['data']:\n",
     "    for fee in park['entranceFees']:\n",
     "        entry_fees_data.append({\n",
@@ -598,7 +684,9 @@
     "            'fee_usd': fee['cost'],\n",
     "            'fee_type': fee['title'],\n",
     "            'fee_description': fee['description']\n",
-    "        })"
+    "        })\n",
+    "        \n",
+    "pprint.pprint(entry_fees_data[2:4])"
    ]
   },
   {
@@ -822,7 +910,7 @@
     "Additional API Resources\n",
     "-------------------------------\n",
     "\n",
-    "Full **Requests documentation**: https://3.python-requests.org/\n",
+    "Full **Requests documentation**: https://2.python-requests.org/en/master\n",
     "\n",
     "**data.gov** is a repository of data produced by US Federal and State Government departments. In addition to data files, data.gov also provides a list of API services for Federal data (https://catalog.data.gov/dataset?res_format=API).\n",
     "\n",
@@ -832,7 +920,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -846,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
